# littleblits

./: .gitignore  CMakeLists.txt  readme.md
include/rockit/core/: actor.h  application.h  array.h  coroutine.h  function.h  pointer.h  referencecounter.h  resource.h
include/rockit/graphics/: pipeline.h  renderer.h  rendertarget.h  shader.h  texture.h
include/rockit/math/: vec2.h
include/rockit/platform/: platform.h  window.h
modules/platform/sdl2/: platform_sdl2.cpp  platform_sdl2.h  renderer_sdl2.cpp
modules/renderer/opengl/: renderer_opengl.cpp  renderer_opengl.h
modules/sdl2/: platform_sdl2.cpp  platform_sdl2.h  renderer_sdl2.cpp
samples/demo/: CMakeLists.txt
samples/demo/src/: demo.cpp
src/core/: actor.cpp  application.cpp  coroutine.cpp  pointer.cpp  resource.cpp
src/graphics/: pipeline.cpp  rendertarget.cpp  shader.cpp
src/math/: vec2.cpp
src/platform/: window.cpp
tests/: CMakeLists.txt  test.cpp  test_containers.cpp
